--- a/backend/index.html
+++ b/backend/index.html
@@ -1626,7 +1626,7 @@ button:active {
 // HARDCODED API CONFIGURATION
 // ============================================================================
 
-const API_BASE = 'http://localhost:8000/api';
+const API_BASE = 'https://neuraldao-sub-final.onrender.com/api';
 console.log('🔗 API Base URL:', API_BASE);
 
 // ============================================================================
